# dep-vuln-checker

./: NOTES.md  README.md  pyproject.toml
src/dep_vuln_checker/: cli.py  lockfiles.py  osv.py  output.py  severity.py
src/dep_vuln_checker/parsers/: __init__.py  package_lock.py  pyproject.py  requirements.py
tests/: test_osv.py  test_output.py  test_parser_package_lock.py  test_parser_pyproject.py  test_parser_requirements.py  test_smoke.py
